--- a/src/templates/sf-obiba-countries-ui-select.html
+++ b/src/templates/sf-obiba-countries-ui-select.html
@@ -1,4 +1,7 @@
-<div ng-controller="sfObibaCountriesUiSelectController" schema-validate="form" sf-field-model>
+<div
+  ng-class="{'has-error': form.disableErrorState !== true && hasError(), 'has-success': form.disableSuccessState !== true && hasSuccess(), 'has-feedback': form.feedback !== false }"
+  ng-controller="sfObibaCountriesUiSelectController"
+  schema-validate="form" sf-field-model>
   <form-ui-select ng-if="locales && locales.length > 1"
                   title="form.title"
                   show-title="!form.notitle"
