add disbled property

--- a/src/templates/sf-obiba-countries-ui-select.html
+++ b/src/templates/sf-obiba-countries-ui-select.html
@@ -5,6 +5,7 @@
   <form-ui-select ng-if="locales && locales.length > 1"
                   title="form.title"
                   show-title="!form.notitle"
+                  disabled="form.readonly"
                   items="data[selectedLocale]"
                   auto-complete="form.autoComplete"
                   sf-field-model="replaceAll"
