MK-1143 Add the possibility to select only one country

--- a/src/templates/sf-obiba-countries-ui-select.html
+++ b/src/templates/sf-obiba-countries-ui-select.html
@@ -10,5 +10,6 @@
                   auto-complete="form.autoComplete"
                   sf-field-model="replaceAll"
                   model="$$value$$"
+                  multiple="form.multiple"
                   description="form.description"></form-ui-select>
 </div>
