Prepare angular 1.6.9 update

--- a/src/templates/sf-obiba-countries-ui-select.html
+++ b/src/templates/sf-obiba-countries-ui-select.html
@@ -8,6 +8,7 @@
                   disabled="form.readonly"
                   items="data[selectedLocale]"
                   auto-complete="form.autoComplete"
+                  ng-model-options="{ allowInvalid: true }"
                   sf-field-model="replaceAll"
                   model="$$value$$"
                   multiple="form.multiple"
